Fixed Css for projects page - text wrap on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 /* Custom css class for ensuring whole-page alignment without repetition */
 @layer components {
   .alignment-class {
-    @apply mx-auto max-w-7xl px-8 grid md:grid-cols-2 items-center gap-8 pt-4;
+    @apply mx-auto max-w-7xl px-4 sm:px-8 grid md:grid-cols-2 items-center gap-8 pt-4;
   }
 }
 
@@ -21,3 +21,10 @@
 .active {
   color: #0284c7;
 }
+
+#projects-div {
+  grid-template-columns: 1fr;
+  min-width: 0%;
+}
+
+
